# crew_j_te_employee_phone_dw

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  databricks.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci-workflow.yml
backup/: .ruff.toml  MODULE.bazel  README.md  pyproject.toml  requirements.txt
backup/.github/workflows/: cd-workflow.yml
backup/configs/: business_rules.yaml  column_mappings.yaml  job.yaml  pipeline_config.yaml
backup/notebooks/: run_pipeline.py
backup/src/transformations/: BUILD.bazel  away_priority_pipeline.py  home_phone_join.py  home_priority_pipeline.py  phone_finalizer.py  phone_union.py
backup/src/utils/: config_loader.py  logger.py  validators.py
backup/src/writers/: BUILD.bazel  error_writer.py
backup/tests/: test_away_priority_pipeline.py  test_basic_phone_pipeline.py  test_home_priority_pipeline.py  test_phone_finalizer.py  test_phone_router.py  test_phone_union.py
backup/tests/fixtures/: sample_data.py
configs/: pipeline_config.yaml
src/: BUILD.bazel  pipeline.py
src/readers/: BUILD.bazel  source_reader.py
src/transformations/: away_phone_join.py  away_priority_pipeline.py  basic_phone_pipeline.py  common.py  home_priority_pipeline.py  phone_finalizer.py  phone_router.py  phone_union.py
src/utils/: BUILD.bazel  config_loader.py
src/writers/: delta_writer.py  target_writer.py
tests/: BUILD.bazel  conftest.py  pytest_main.py  test_away_phone_join.py  test_away_priority_pipeline.py  test_basic_phone_pipeline.py  test_home_phone_join.py  test_home_priority_pipeline.py  test_phone_router.py  test_pipeline_integration.py  test_source_reader.py
tests/fixtures/: README.md  synthetic_data.py
