load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "tests",
    srcs = glob(["**/*.py"]),
    deps = [
        "//src/readers:readers",
        "//src/transformations:transformations",
        "//src/writers:writers",
        "//src/utils:utils",
    ],
    visibility = ["//visibility:public"],
)
