[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "crew_j_te_employee_phone_dw"
version = "1.0.0"
description = "Databricks PySpark pipeline: CREW_WSTELE_LND → TE_EMPLOYEE_PHONE (migrated from DataStage CREW_J_TE_EMPLOYEE_PHONE_DW)"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.4",
    "delta-spark>=2.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "chispa>=0.9",
    "ruff>=0.1",
    "black>=23.0",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80 -v"

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py", "notebooks/*"]

# -------------------------
# Pylint configuration (Databricks-friendly)
# -------------------------
[tool.pylint.format]
max-line-length = 250

[tool.pylint.messages_control]
disable = [
    # Docstring noise (optional)
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-locals",
    "too-many-statements",
    "too-many-arguments",
    "too-many-positional-arguments",
    "duplicate-code",

    # Ruff handles formatting/import sorting; keep pylint focused on correctness
    "line-too-long",
    "wrong-import-order",

    # Databricks/CI environment gaps (e.g., dlt not available in CI)
    "import-error",
]

[tool.pylint.variables]
# Databricks runtime-injected globals
additional-builtins = ["spark", "dbutils", "display"]

[tool.pylint.reports]
score = false
