load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "tests",
    srcs = glob(["**/*.py"]),
    main = "pytest_main.py",
    deps = [
        "//src:src_lib",
        "@pip//pytest",
        "@pip//pytest_cov",
        "@pip//coverage",
        "@pip//chispa",
        "@pip//prettytable",
        "@pip//pyspark",
        "@pip//py4j",
        "@pip//delta_spark",
        "@pip//pyyaml",
    ],
)